# plaid-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: README.md  fly.toml
src/plaid_mcp/: __init__.py  __main__.py  client.py  config.py  link.py  server.py  server_helpers.py  storage.py  teller_cli.py  tools_debt.py  tools_transactions.py  tools_wealth.py
src/plaid_mcp/payments/: __init__.py  base.py  mpp.py  noop.py  prices.py  x402.py
src/plaid_mcp/providers/: __init__.py  base.py  factory.py  plaid.py  teller.py
src/plaid_mcp/tui/: __init__.py  app.py
src/plaid_mcp/tui/screens/: __init__.py  accounts.py  connect.py  empty.py  transactions.py
tests/: conftest.py  test_config.py  test_integration_sandbox.py  test_payments.py  test_providers_plaid.py  test_providers_teller.py  test_server_mcp.py  test_server_provider_routing.py  test_storage.py  test_tools.py  test_tui.py
