[project]
name = "plaid-mcp"
version = "0.1.0"
description = "Read-only MCP server for analyzing Plaid-connected accounts from Claude or ChatGPT."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "plaid-mcp contributors" }]
keywords = ["plaid", "mcp", "claude", "chatgpt", "finance", "llm", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp>=2.2.0",
    "plaid-python>=36.0.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "click>=8.1",
    "textual>=0.80",
    "x402[evm]>=2.8.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
# Coinbase CDP facilitator support — needed for x402 on Base mainnet.
# Install with `uv sync --extra cdp` (or `pip install "plaid-mcp[cdp]"`).
cdp = [
    "cdp-sdk>=1.43,<2",
]

[project.urls]
Homepage = "https://github.com/t-rhex/plaid-mcp"
Repository = "https://github.com/t-rhex/plaid-mcp"
Issues = "https://github.com/t-rhex/plaid-mcp/issues"
Changelog = "https://github.com/t-rhex/plaid-mcp/releases"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "sandbox: tests that hit the real Plaid sandbox API (skipped without .env.test)",
    "x402_testnet: tests that hit a live x402 facilitator on Base Sepolia (skipped without X402_TESTNET_PRIVATE_KEY)",
    "x402_mainnet: tests that spend REAL USDC on Base mainnet (skipped unless X402_MAINNET_PRIVATE_KEY is set — opt-in only)",
]
testpaths = ["tests"]

[project.scripts]
plaid-mcp = "plaid_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plaid_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
